# index.rsx

./: .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  tailwind.css
assets/: tailwind.css
assets/styling/: main.css
src/: components.rs  main.rs  views.rs
src/components/: echo.rs  hero.rs  route_outlet.rs
src/views/: ghrepos.rs  home.rs  navbar.rs
